--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     font-family: Roboto, "Helvetica Neue", sans-serif, Arial;
     padding: 1vh;
-    background-color: lightgrey;
+    background-color: ;
 
 
 }
